# HistLink

./: .editorconfig  .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  biome.json  docker-compose.yml  package-lock.json  package.json  relation.json  render.yaml  term.json
.claude/: settings.local.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/.hypothesis/constants/: 238ea8e458182799  38424fb2f1029899  3b55ed023ceb8871  6e16a1b878c06427  730deb9e782dacef  8c495fabc711f2ff  8cc5c17c14957223  da39a3ee5e6b4b0d  effd56d02720cab8
backend/.hypothesis/examples/04e6b3400353b141/: fa8d315e264b973f
backend/.hypothesis/examples/fa8d315e264b973f/: 1236c0a13f38a176
backend/.hypothesis/tmp/: tmp5eh2_0rf  tmp6bqhv3sx
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/routes/: __init__.py  admin.py  games.py  routes.py
backend/app/schemas/: __init__.py  admin.py  game.py  route.py  term.py
backend/app/services/: cache.py  distractor_generator.py  route_generator.py
backend/histlink_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_admin_api.py  test_admin_edges.py  test_admin_terms.py  test_cache.py  test_config.py  test_data_quality.py  test_data_quality_stats.py  test_database.py  test_distractor_generator.py  test_game_lifecycle.py  test_games_api.py  test_games_result.py  test_games_start.py  test_hypothesis_example.py  test_main.py  test_route_generator.py  test_routes_api.py  test_schemas.py  test_schemas_route.py
(+134 files in other folders)
